Add new example query, expand the "quick" and "test" datasets to return the expected values with the new example query

--- a/frontend/examples/examples.html
+++ b/frontend/examples/examples.html
@@ -65,6 +65,12 @@ Find all pairs <strong>where hydrogen changes to anything, on an aromatic carbon
         <pre class="idea"><strong>Example 7:</strong> <a href="./snap/7" target="_blank">Run search</a>
 Find all pairs <strong>that vary at the amide. Require <= 8 non-H atoms in the variable (green-highlighted) fragment. Group transforms by transformed fragment.</strong></pre>
         <a href="./snap/7" target="_blank"><img class="example_img" src="./examples/7.png"></a>
+
+        <br><br><br><br>
+
+        <pre class="idea"><strong>Example 8:</strong> <a href="./snap/8" target="_blank">Run search</a>
+Find all pairs <strong>where a 1-naphthyl changes to any substructure containing a 6-membered aromatic ring attached to the core via a tertiary amide.</strong></pre>
+        <a href="./snap/8" target="_blank"><img class="example_img" src="./examples/8.png"></a>
     </div>
 
     <style>
